# Calculax

./: CMakeLists.txt  Calculax  DISTRIB.md  Dockerfile  Makefile  Makefile.am  Makefile.dev  Makefile.in  QUESTIONS.md  README.md  calculax  config.status  configure  configure.ac
.deps/: main.Po
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
src/: actions.c  actions.h  calculator.c  history.c  history.h  interpreter.c  interpreter.h  main.c  memory.c  memory.h  split_line.c  split_line.h  trie.c  trie.h  utils.c  utils.h
src/.deps/: actions.Po  calculator.Po  history.Po  interpreter.Po  main.Po  memory.Po  split_line.Po  trie.Po  utils.Po
