AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = calculax
calculax_SOURCES = src/main.c \
                   src/actions.c \
                   src/calculator.c \
                   src/history.c \
                   src/interpreter.c \
                   src/memory.c \
                   src/split_line.c \
                   src/trie.c \
                   src/utils.c \
                   src/interpreter.h src/utils.h

AM_LDFLAGS = -lncurses