AUTOMAKE_OPTIONS = foreign subdir-objects
bin_PROGRAMS = calculax
calculax_LDADD = -lncurses
calculax_SOURCES = src/main.c \
                   src/actions.c \
                   src/calculator.c \
                   src/history.c \
                   src/interpreter.c \
                   src/memory.c \
                   src/split_line.c \
                   src/trie.c \
                   src/utils.c \
                   src/interpreter.h src/utils.h
